[tool.poetry]
name = "nr-ot-protobuf-repro"
version = "0.1.0"
description = ""
authors = ["Adam Bard <adam.bard@perfectserve.com>"]
readme = "README.md"
packages = [{include = "nr_ot_protobuf_repro"}]

[tool.poetry.dependencies]
python = "^3.10"
newrelic = "^9.11.0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
